themes/mountainsunset/css/css.css
/*
 * wp reset
 */

.entry-content #vrp a, .entry-summary #vrp a, .page-content #vrp a  {
    border:none !important;
}

/**********************************
 BOOTSTRAP GRID & TYPOGRPAHY RESET
 **********************************
*/

/*!
 * Bootstrap v3.3.4 (http://getbootstrap.com)
 * Copyright 2011-2015 Twitter, Inc.
 * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
 */

/*!
 * Generated using the Bootstrap Customizer (http://getbootstrap.com/customize/?id=342a3b2f8d9eccbe7902)
 * Config saved to config.json and https://gist.github.com/342a3b2f8d9eccbe7902
 */
/*! normalize.css v3.0.2 | MIT License | git.io/normalize */

#vrp article,
#vrp aside,
#vrp details,
#vrp figcaption,
#vrp figure,
#vrp footer,
#vrp header,
#vrp hgroup,
#vrp main,
#vrp menu,
#vrp nav,
#vrp section,
#vrp summary {
    display: block;
}
#vrp audio,
#vrp canvas,
#vrp progress,
#vrp video {
    display: inline-block;
    vertical-align: baseline;
}
#vrp audio:not([controls]) {
    display: none;
    height: 0;
}
#vrp [hidden],
#vrp template {
    display: none;
}
#vrp a {
    background-color: transparent;
}
#vrp a:active,
#vrp a:hover {
    outline: 0;
}
#vrp abbr[title] {
    border-bottom: 1px dotted;
}
#vrp b,
#vrp strong {
    font-weight: bold;
}
#vrp dfn {
    font-style: italic;
}
#vrp h1 {
    font-size: 2em;
    margin: 0.67em 0;
}
#vrp mark {
    background: #ff0;
    color: #000;
}
#vrp small {
    font-size: 80%;
}
#vrp sub,
#vrp sup {
    font-size: 75%;
    line-height: 0;
    position: relative;
    vertical-align: baseline;
}
#vrp sup {
    top: -0.5em;
}
#vrp sub {
    bottom: -0.25em;
}
#vrp img {
    border: 0;
}
#vrp svg:not(:root) {
    overflow: hidden;
}
#vrp figure {
    margin: 1em 40px;
}
#vrp hr {
    -moz-box-sizing: content-box;
    -webkit-box-sizing: content-box;
    box-sizing: content-box;
    height: 0;
}
#vrp pre {
    overflow: auto;
}
#vrp code,
#vrp kbd,
#vrp pre,
#vrp samp {
    font-family: monospace, monospace;
    font-size: 1em;
}
#vrp button,
#vrp input,
#vrp optgroup,
#vrp select,
#vrp textarea {
    color: inherit;
    font: inherit;
    margin: 0;
}
#vrp button {
    overflow: visible;
}
#vrp button,
#vrp select {
    text-transform: none;
}
#vrp button,
#vrp input[type="button"],
#vrp input[type="reset"],
#vrp input[type="submit"] {
    -webkit-appearance: button;
    cursor: pointer;
}
#vrp button[disabled],
#vrp input[disabled] {
    cursor: default;
}
#vrp button::-moz-focus-inner,
#vrp input::-moz-focus-inner {
    border: 0;
    padding: 0;
}
#vrp input {
    line-height: normal;
}
#vrp input[type="checkbox"],
#vrp input[type="radio"] {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    padding: 0;
}
#vrp input[type="number"]::-webkit-inner-spin-button,
#vrp input[type="number"]::-webkit-outer-spin-button {
    height: auto;
}
#vrp input[type="search"] {
    -webkit-appearance: textfield;
    -moz-box-sizing: content-box;
    -webkit-box-sizing: content-box;
    box-sizing: content-box;
}
#vrp input[type="search"]::-webkit-search-cancel-button,
#vrp input[type="search"]::-webkit-search-decoration {
    -webkit-appearance: none;
}
#vrp fieldset {
    border: 1px solid #c0c0c0;
    margin: 0 2px;
    padding: 0.35em 0.625em 0.75em;
}
#vrp legend {
    border: 0;
    padding: 0;
}
#vrp textarea {
    overflow: auto;
}
#vrp optgroup {
    font-weight: bold;
}
#vrp table {
    border-collapse: collapse;
    border-spacing: 0;
}
#vrp td,
#vrp th {
    padding: 0;
}
#vrp input,
#vrp button,
#vrp select,
#vrp textarea {
    font-family: inherit;
    font-size: inherit;
    line-height: inherit;
}
#vrp a {
    color: #337ab7;
    text-decoration: none;
}
#vrp a:hover,
#vrp a:focus {
    color: #23527c;
    text-decoration: underline;
}
#vrp a:focus {
    outline: thin dotted;
    outline: 5px auto -webkit-focus-ring-color;
    outline-offset: -2px;
}
#vrp figure {
    margin: 0;
}
#vrp img {
    vertical-align: middle;
}
#vrp .vrp-img-responsive {
    display: block;
    max-width: 100%;
    height: auto;
}
#vrp .vrp-img-rounded {
    border-radius: 6px;
}
#vrp .vrp-img-thumbnail {
    padding: 4px;
    line-height: 1.42857143;
    background-color: #ffffff;
    border: 1px solid #dddddd;
    border-radius: 4px;
    -webkit-transition: all 0.2s ease-in-out;
    -o-transition: all 0.2s ease-in-out;
    transition: all 0.2s ease-in-out;
    display: inline-block;
    max-width: 100%;
    height: auto;
}
#vrp .vrp-img-circle {
    border-radius: 50%;
}
#vrp hr {
    margin-top: 20px;
    margin-bottom: 20px;
    border: 0;
    border-top: 1px solid #eeeeee;
}
#vrp .vrp-container {
    margin-right: auto;
    margin-left: auto;
    padding-left: 15px;
    padding-right: 15px;
}
@media (min-width: 768px) {
    #vrp .vrp-container {
        width: 750px;
    }
}
@media (min-width: 992px) {
    #vrp .vrp-container {
        width: 970px;
    }
}
@media (min-width: 1200px) {
    #vrp .vrp-container {
        width: 1170px;
    }
}
#vrp .vrp-container-fluid {
    margin-right: auto;
    margin-left: auto;
    padding-left: 15px;
    padding-right: 15px;
}
#vrp .vrp-row {
    margin-left: -15px;
    margin-right: -15px;
}
/* ... */

